# WireGuard-Manager

./: CMakeLists.txt  COPYING  README.md  main.cpp  wireguard-manager.cpp  wireguard-manager.hpp
defaults/: groups.conf
